# Spinnn

./: .env.example  .gitignore  BLUETOOTH_ARCHITECTURE.md  BLUETOOTH_SETUP.md  CLAUDE.md  Dockerfile  QUICKSTART.md  QUICKSTART_STRAVA.md  README.md  TAURI.md  TODO.md  index.html  package.json  playwright.config.js  vite.config.js  vitest.config.js
docs/: DOKPLOY.md  PRD.md  STRAVA.md  STRAVA_SETUP.md  STRAVA_SETUP_SECURE.md  TEST_PLAN.md
dokploy/: spinnn.yaml
server/: .env.example  .gitignore  Dockerfile  README.md  index.js  package.json  tsconfig.json
server/routes/: strava.js
server/src/: index.ts
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ble.rs  lib.rs
src/components/: BluetoothDebug.vue  DeviceConnector.vue  HeartRateChart.vue  IntervalsSettings.vue  IntervalsTodayWorkout.vue  PowerChart.vue  WorkoutChart.vue  WorkoutPreviewChart.vue  WorkoutSelector.vue
src/composables/: useAppState.js  useAudioSettings.js  useBluetoothHRM.js  useBluetoothTrainer.js  useFreeRide.js  useI18n.js  useIntervalsIcu.js  useMockDevices.js  usePowerAdjustments.js  useStorage.js  useStrava.js  useTheme.js  useWorkoutData.js  useWorkoutSession.js  useWorkoutStats.js
src/constants/: bluetooth.js  zones.js
src/data/: sampleWorkouts.js
src/locales/: en.js  fr.js  index.js
src/router/: index.js
src/utils/: Connectable.js  EventDispatcher.js  bluetoothParser.js  fitExporter.js  logger.js  platform.js  web-ble.js  workoutHelpers.js
tests/: README.md  setup.js
(+52 files in other folders)
