[package]
name = "spinnn"
version = "0.1.0"
description = "Spinnn - Cycling Workout Manager"
authors = ["tprat"]
license = "MIT"
repository = "https://github.com/T-PRAT/Spinnn"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tokio = { version = "1.42", features = ["sync", "rt-multi-thread", "macros"] }
uuid = { version = "1.11", features = ["v4"] }
thiserror = "2.0"

# Platform-specific BLE dependencies
# Note: btleplug requires system dependencies:
# - Linux: libudev, pkg-config
# - macOS: None (works out of the box)
# - Windows: None (works out of the box)
#
# Uncomment these when btleplug integration is fully implemented:
# [target.'cfg(target_os = "linux")'.dependencies]
# btleplug = "0.11"
#
# [target.'cfg(target_os = "macos")'.dependencies]
# btleplug = "0.11"
#
# [target.'cfg(target_os = "windows")'.dependencies]
# btleplug = "0.11"

# [target.'cfg(target_os = "ios")'.dependencies]
# iOS not supported yet
